Massive amazing changes

--- a/classes.html
+++ b/classes.html
@@ -7,6 +7,22 @@
   </head>
 
   <body>
+    <hr>
+    <table>
+      <tr>
+        <td>
+          <a href="index.html">Home</a>
+        </td>
+        <td>
+          <a href="classes.html">Classes</a>
+        </td>
+        <td>
+          <a href="complaints.html">Compaints</a>
+        </td>
+      </tr>
+    </table>
+    <hr>
+
     <h3>Classes I Leveled Without Joey B's Stimmy Money</h3>
     <ol>
       <li>Warrior</li>
