--- a/index.html
+++ b/index.html
@@ -22,13 +22,28 @@
   </table>
 
   <hr>
+  <table>
+    <tr>
+      <td>
+        <a href="index.html">Home</a>
+      </td>
+      <td>
+        <a href="classes.html">Classes</a>
+      </td>
+      <td>
+        <a href="complaints.html">Compaints</a>
+      </td>
+    </tr>
+  </table>
+  <hr>
+
   <h3>Classes I Boosted with Joey B's Stimmy Money</h3>
   <ul>
     <li>No classes, because Joey B cucked people with a fucking job.</li>
   </ul>
   <hr>
   <h3>Raid History</h3>
-  <table border="1">
+  <table border="1" cellspacing="3">
     <thead>
       <tr>
         <th>Raid</th>
@@ -61,7 +76,6 @@
     </tfoot>
   </table>
   <hr>
-  <a href="classes.html">Classes</a>
 </body>
 
 </html>
