Added some color

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Maxotaur's Personal Site</title>
+  <link rel="stylesheet" href="css\styles.css">
+
 </head>
 
-<body>
+<body></body>
   <table>
     <tr>
       <td>
-        <img src="Images/WorldBuffs.png" alt="Maxotaur getting cucked out of some world buffs on his way to Naxx.">
+        <img src="images/WorldBuffs.png" alt="Maxotaur getting cucked out of some world buffs on his way to Naxx.">
       </td>
       <td>
         <h1><center>Maxotaur</center></h1>
